k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antoinechampion-com
  labels:
    app: antoinechampion-com
spec:
  selector:
    matchLabels:
      app: antoinechampion-com
  replicas: 1
  template:
    metadata:
      labels:
        app: antoinechampion-com
    spec:
      containers:
      - name: antoinechampion-com
        image: rg.fr-par.scw.cloud/achampion/antoinechampion-com:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
      imagePullSecrets:
        - name: scaleway-cr
---
apiVersion: v1
kind: Service
metadata:
  name: antoinechampion-com
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 443
    name: https
    protocol: TCP
    targetPort: 443
  selector:
    app: antoinechampion-com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: antoinechampion-com
  labels:
    app: antoinechampion-com
spec:
  rules:
  - host: antoinechampion.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: antoinechampion-com
            port: 
              number: 80
  - host: www.antoinechampion.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: antoinechampion-com
            port: 
              number: 80
